Fix RequestHandlerTests